--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,15 @@ background: linear-gradient(to right, #fe9365, #feb798);}
 .bg-purple{
   background: linear-gradient(to right, #ca61ff, #e4adff);
 }
+
+element.style {
+}
+
+/* .hNDFCv {
+    background: orange;
+    width: -12px;
+    inner-width: 2%;
+} */
+.coDjSU{
+  width: 10;
+}
